--- a/head/index.html
+++ b/head/index.html
@@ -49,8 +49,8 @@
                                         <img src="icona.png" class="figure-img img-fluid rounded" alt="La mia immagine">
                                     </figure>
                                     <div class="it-brand-text">
-                                        <div class="it-brand-title">Gabriel Jones</div>
-                                        <div class="it-brand-tagline d-none d-md-block">network ufficiale GJD✅</div>
+                                        <div class="it-brand-title">Interno</div>
+                                        <div class="it-brand-tagline d-none d-md-block">Sito ufficiale dell'interno GJD✅</div>
                                     </div>
                                 </a>
                             </div>
