--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Jones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <style>
         body {
             margin: 0;
@@ -16,19 +15,17 @@
             height: 273px; /* Altezza dell'header */
             border: none;
         }
-
         .iframe-container {
             width: 80%;  /* Imposta la larghezza al 80% della finestra del browser */
-            height: 200px; /* Altezza dell'header */
+            height: 273px; /* Altezza dell'header */
             margin: 0 auto; /* Centra l'elemento orizzontalmente */
         }
-
     </style>
 </head>
 <body>
-    <iframe src="head/index.html" frameborder="0"></iframe>
-    <p>L'interno è un sito web creato e gestito da GJDEV, progettato per raccogliere e organizzare tutti i post e le pagine interne di GJD. Questo portale funge da archivio completo e aggiornato, offrendo agli utenti un facile accesso a tutte le informazioni e i contenuti pubblicati all'interno della rete GJD. Grazie a una navigazione intuitiva e a una struttura ben organizzata, gli utenti possono trovare rapidamente ciò di cui hanno bisogno. L'obiettivo principale del sito è quello di centralizzare le risorse, migliorando così l'efficienza nella gestione e nella consultazione dei contenuti.</p>
-
-</div>
+        <iframe src="head/index.html" frameborder="0"></iframe>
+    <div class="container">
+        <p>L'interno è un sito web creato e gestito da GJDEV, progettato per raccogliere e organizzare tutti i post e le pagine interne di GJD. Questo portale funge da archivio completo e aggiornato, offrendo agli utenti un facile accesso a tutte le informazioni e i contenuti pubblicati all'interno della rete GJD. Grazie a una navigazione intuitiva e a una struttura ben organizzata, gli utenti possono trovare rapidamente ciò di cui hanno bisogno. L'obiettivo principale del sito è quello di centralizzare le risorse, migliorando così l'efficienza nella gestione e nella consultazione dei contenuti.</p>
+    </div>
 </body>
 </html>
