--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body {
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif; /* Font family generico per il testo */
         }
         iframe {
             width: 100%;
@@ -20,11 +21,23 @@
             height: 273px; /* Altezza dell'header */
             margin: 0 auto; /* Centra l'elemento orizzontalmente */
         }
+        .container {
+            max-width: 800px; /* Larghezza massima del contenuto per evitare che diventi troppo largo */
+            margin: 20px auto; /* Centra il contenuto orizzontalmente con un margine di 20px sopra e sotto */
+            padding: 0 15px; /* Padding ai lati del contenuto */
+        }
+        .container img {
+            max-width: 100%; /* L'immagine si ridimensiona automaticamente fino a un massimo di larghezza 100% del contenitore padre */
+            height: auto; /* L'altezza si adatta automaticamente proporzionalmente alla larghezza */
+            display: block; /* Rende l'immagine un blocco per evitare problemi di allineamento con il testo */
+            margin-bottom: 15px; /* Margine inferiore per spaziatura dal paragrafo */
+        }
     </style>
 </head>
 <body>
         <iframe src="head/index.html" frameborder="0"></iframe>
     <div class="container">
+        <img src="https://gjdnetwork.github.io/interno/head/icona.png" alt="Descrizione dell'immagine">
         <p>L'interno è un sito web creato e gestito da GJDEV, progettato per raccogliere e organizzare tutti i post e le pagine interne di GJD. Questo portale funge da archivio completo e aggiornato, offrendo agli utenti un facile accesso a tutte le informazioni e i contenuti pubblicati all'interno della rete GJD. Grazie a una navigazione intuitiva e a una struttura ben organizzata, gli utenti possono trovare rapidamente ciò di cui hanno bisogno. L'obiettivo principale del sito è quello di centralizzare le risorse, migliorando così l'efficienza nella gestione e nella consultazione dei contenuti.</p>
     </div>
 </body>
