--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
         <iframe src="head/index.html" frameborder="0"></iframe>
     <div class="container">
-        <img src="interno.png" alt="Descrizione dell'immagine">
+        <img src="Interno.png" alt="Descrizione dell'immagine">
         <p>L'interno è un sito web creato e gestito da GJDEV, progettato per raccogliere e organizzare tutti i post e le pagine interne di GJD. Questo portale funge da archivio completo e aggiornato, offrendo agli utenti un facile accesso a tutte le informazioni e i contenuti pubblicati all'interno della rete GJD. Grazie a una navigazione intuitiva e a una struttura ben organizzata, gli utenti possono trovare rapidamente ciò di cui hanno bisogno. L'obiettivo principale del sito è quello di centralizzare le risorse, migliorando così l'efficienza nella gestione e nella consultazione dei contenuti.</p>
     </div>
 </body>
