--- a/index.html
+++ b/index.html
@@ -74,11 +74,21 @@
     </h2>
     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
       <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        <div>
         <a href="url">link text</a>
+        </div>
+                <div>
         <a href="url">link text</a>
+        </div>
+                <div>
         <a href="url">link text</a>
+        </div>
+                <div>
         <a href="url">link text</a>
-
+        </div>
+                <div>
+        <a href="url">link text</a>
+        </div>
     </div>
   </div>
   <div class="accordion-item">
