--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 
 
 
-
-
-
-
+            <h1>Computer dei file di GJD</h1>
         <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
