--- a/index.html
+++ b/index.html
@@ -96,22 +96,28 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-        Accordion Item #2
+Nessun dato disponibile
       </button> 
     </h2>
       
     <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-
+        <p>Nessun dato disponibile</p>
     </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-        Accordion Item #3
+        GJD DEVICE
       </button>
     </h2>
-    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-    </div>
+        <p>GJD_device_1</p>
+        <p>GJD_device_2</p>
+        <p>GJD_device_master</p>
+        <p>GJD_device_educ</p>
+        <p>GJD_device_tablet1</p>
+        <p>GJD_device_tablet2</p>
+        <p>GJD_device_phone1</p>
+        <p>GJD_device_phone2</p>
+        <p>GJD_device_phone3</p>
   </div>
 </div>
     </div>
