--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-        Documenti amministrativi
+        Documenti
       </button>
     </h2>
     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -96,9 +96,22 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-Nessun dato disponibile
+Interni
       </button> 
     </h2>
+      <div>
+      <p>11000 🌟</p> <p><b>Gabriel Jones Dev User</b></p>
+      </div>
+      <div>
+      <p>1 🌟</p> <p><b>Gabriel Jones User</b></p>
+      </div>
+      <div>
+      <p>7000 🌟</p> <p><b>7000</b></p>
+          <p>Questo è un utente inattivo con funzione di archivio di informazioni bancarie, legali e di informazioni altamente riservate.</p>
+       </div>
+      <div>
+     <p>3 🌟</p> <p><b>Gabriel Jones SRV user</b></p>
+      </div>
       </div>
 
 
