--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </div>
   </div>
-  <div class="accordion-item">
+<div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
 Interni
@@ -113,6 +113,7 @@ Interni
      <p>3 🌟</p> <p><b>Gabriel Jones SRV user</b></p>
       </div>
       </div>
+</div>
 
 
 
