--- a/head/index.html
+++ b/head/index.html
@@ -46,7 +46,7 @@
                             <div class="it-brand-wrapper">
                                 <a href="index.html" target="_blank">
                                     <figure class="figure ratio ratio-1x1 lightgrey-bg-a1 mb-4 rounded">
-                                        <img src="/GJD-removebg-preview.png" class="figure-img img-fluid rounded" alt="La mia immagine">
+                                        <img src="/gjdev/GJD-removebg-preview.png" class="figure-img img-fluid rounded" alt="La mia immagine">
                                     </figure>
                                     <div class="it-brand-text">
                                         <div class="it-brand-title">Interno</div>
@@ -72,7 +72,6 @@
                                 <div class="overlay" style="display: none;"></div>
                                 <div class="close-div">
                                     <button class="btn close-menu" type="button">
-                                        <span class="visually-hidden">Nascondi la navigazione</span>
                                         <svg class="icon"><use href="/bootstrap-italia/dist/svg/sprites.svg#it-close-big"></use></svg>
                                     </button>
                                 </div>
