--- a/head/index.html
+++ b/head/index.html
@@ -46,7 +46,7 @@
                             <div class="it-brand-wrapper">
                                 <a href="index.html" target="_blank">
                                     <figure class="figure ratio ratio-1x1 lightgrey-bg-a1 mb-4 rounded">
-                                        <img src="/gjdev/GJD-removebg-preview.png" class="figure-img img-fluid rounded" alt="La mia immagine">
+                                        <img src="https://gjd-central.github.io/gjdev/GJD-removebg-preview.png" class="figure-img img-fluid rounded" alt="La mia immagine">
                                     </figure>
                                     <div class="it-brand-text">
                                         <div class="it-brand-title">Interno</div>
